--- a/Lab1-Dwight.htm
+++ b/Lab1-Dwight.htm
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>Who Am I?</h1>
-	<p>My name is <strong><em>Dwight Williams</em></strong>. I have a bit of programming expirience in <strong>python</strong> and a little in windows and linux <strong>assembly</strong> programming. My passion/hobby is <strong>pentesting</strong> my friends web applications to help find atleast basic flaws in their applications. I hope to learn alot in this course so I could become a developer and not just a breaker.</p>
+	<p>My name is <strong><em>Dwight Williams</em></strong>. I have a bit of programming experience in <strong>python</strong> and a little in windows and linux <strong>assembly</strong> programming. My passion/hobby is <strong>pentesting</strong> my friends web applications to help find atleast basic flaws in their applications. I hope to learn alot in this course so I could become a developer and not just a breaker.</p>
 </body>
 </html>
